@@ -1,8 +1,12 @@
 Changes between KOffice-1.3.1 and KOffice-1.3.2
 ===============================================
+KOfficeCore:
+- Give the backup file the same permissions as the original file (#54459)
+
 KoText:
 - Changing a style in the style manager remembered a wrong "following style",
   so later changes in the style manager wouldn't propagate correctly (#47377)
+- Fixed wrong position of suffix in numbered right-to-left paragraphs (#47178)
 
 Changes between KOffice-1.3 and KOffice-1.3.1
 =============================================
